--- a/mag.ipynb
+++ b/mag.ipynb
@@ -1565,7 +1565,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.rename(index=str,columns={\"AA\": \"Authors\", })"
+   ]
   },
   {
    "cell_type": "code",
