Splitting rows by authors

--- a/mag.ipynb
+++ b/mag.ipynb
@@ -3559,11 +3559,15 @@
     "    return df\n",
     "\n",
     "def extract_field(row):\n",
-    "    val = row[\"F\"]\n",
+    "    val = row[\"Domain\"]\n",
     "    index = val.rfind(\"FN\")\n",
     "    val = val[index+3:len(val)]\n",
     "    val = val.strip(\":}] '\")\n",
-    "    return val"
+    "    return val\n",
+    "\n",
+    "def get_num_authors(row):\n",
+    "    vals = row[\"Authors\"].split(\"},\")\n",
+    "    return len(vals)"
    ]
   },
   {
@@ -3596,7 +3600,7 @@
     "label_dict = {\"C\":0,\"J\":1,\"CJ\":2,\"O\":3}\n",
     "def find_conference_type(row):\n",
     "    if pd.isnull(row[\"Conference\"]) and pd.isnull(row[\"Journal\"]):\n",
-    "        return label_dict[O]\n",
+    "        return label_dict[\"O\"]\n",
     "    elif pd.isnull(row[\"Conference\"]):\n",
     "        return label_dict[\"J\"]\n",
     "    elif pd.isnull(row[\"Journal\"]):\n",
@@ -3623,7 +3627,8 @@
     }
    ],
    "source": [
-    "df[\"Publication Type\"] = df.apply(lambda row:find_conference_type(row),axis=1)"
+    "df[\"Publication Type\"] = df.apply(lambda row:find_conference_type(row),axis=1)\n",
+    "df[\"Number_Of_authors\"] = df.apply(lambda row:get_num_authors(row), axis = 1)"
    ]
   },
   {
@@ -3631,8 +3636,76 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-
-   "source": []
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tidy_split(df, column, sep='|', keep=False):\n",
+    "    indexes = list()\n",
+    "    id_values = list()\n",
+    "    name_values = list()\n",
+    "    df = df.dropna(subset=[column])\n",
+    "    for i, presplit in enumerate(df[column].astype(str)):\n",
+    "        values = presplit.split(sep)\n",
+    "        if keep and len(values) > 1:\n",
+    "            indexes.append(i)\n",
+    "            id_values.append(presplit)\n",
+    "        for value in values:\n",
+    "            indexes.append(i)\n",
+    "            val = value\n",
+    "            index1 = val.find(\"AuId\")\n",
+    "            index2 = val.find(\"AfN\")\n",
+    "            index3 = val.find(\"'S'\")\n",
+    "            if index3 < index1:\n",
+    "                val = val[index1+4:index2]\n",
+    "                val = val.strip(\"', :\")\n",
+    "            else:\n",
+    "                val = val[index1+4:index3]\n",
+    "                val = val.strip(\"', :\")                \n",
+    "            id_values.append(val)\n",
+    "            index1 = value.find(\"AuN\")\n",
+    "            val = value[index1+3:]\n",
+    "            val = val.strip(\"': }]\")\n",
+    "            name_values.append(val)\n",
+    "    new_df = df.iloc[indexes, :].copy()\n",
+    "    new_df[column+\"_Id\"] = id_values\n",
+    "    new_new_df = new_df.iloc[:, :].copy()\n",
+    "    new_new_df[column+\"_Name\"] = name_values\n",
+    "    return new_new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_big = tidy_split(df,\"Authors\",\"},\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_big.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_big.shape"
+   ]
   }
  ],
  "metadata": {
