Extracting Features from authors

--- a/mag.ipynb
+++ b/mag.ipynb
@@ -57,7 +57,7 @@
         "_uuid": "9d57b8da22246e6b63c80f18ce99402a61145f9f"
       },
       "cell_type": "code",
-      "source": "def tidy_split(df, column, sep='|', keep=False):\n    indexes = list()\n    id_values = list()\n    name_values = list()\n    df = df.dropna(subset=[column])\n    for i, presplit in enumerate(df[column].astype(str)):\n        values = presplit.split(sep)\n        if keep and len(values) > 1:\n            indexes.append(i)\n            id_values.append(presplit)\n        for value in values:\n            indexes.append(i)\n            val = value\n            index1 = val.find(\"AuId\")\n            index2 = val.find(\"AfN\")\n            index3 = val.find(\"'S'\")\n            if index3 < index1:\n                val = val[index1+4:index2]\n                val = val.strip(\"', :\")\n            else:\n                val = val[index1+4:index3]\n                val = val.strip(\"', :\")                \n            id_values.append(val)\n            index1 = value.find(\"AuN\")\n            val = value[index1+3:]\n            val = val.strip(\"': }]\")\n            name_values.append(val)\n    new_df = df.iloc[indexes, :].copy()\n    new_df[column+\"_Id\"] = id_values\n    new_new_df = new_df.iloc[:, :].copy()\n    new_new_df[column+\"_Name\"] = name_values\n    return new_new_df",
+      "source": "def tidy_split(df, column, sep='|', keep=False):\n    indexes = list()\n    id_values = list()\n    name_values = list()\n    df = df.dropna(subset=[column])\n    for i, presplit in enumerate(df[column].astype(str)):\n        values = presplit.split(sep)\n        if keep and len(values) > 1:\n            indexes.append(i)\n            id_values.append(presplit)\n        for value in values:\n            indexes.append(i)\n            val = value\n            index1 = val.find(\"AuId\")\n            index2 = val.find(\"AfN\")\n            index3 = val.find(\"'S'\")\n            if index3 < index1:\n                val = val[index1+4:index2]\n                val = val.strip(\"', :\")\n            else:\n                val = val[index1+4:index3]\n                val = val.strip(\"', :\")                \n            id_values.append(val)\n            index1 = value.find(\"AuN\")\n            val = value[index1+3:]\n            val = val.strip(\"': }]\")\n            name_values.append(val)\n    new_df = df.iloc[indexes, :].copy()\n    del df\n    new_df[column+\"_Id\"] = id_values\n    del new_df\n    new_new_df = new_df.iloc[:, :].copy()\n    new_new_df[column+\"_Name\"] = name_values\n    return new_new_df",
       "execution_count": null,
       "outputs": []
     },
@@ -107,7 +107,7 @@
         "_uuid": "5d1abd32ba5ad7c8fe3df8a76a33be8a923fafa7"
       },
       "cell_type": "code",
-      "source": "print(os.listdir(\"../input/processedmagdata\"))",
+      "source": "print(os.listdir(\"../input/\"))",
       "execution_count": null,
       "outputs": []
     },
@@ -127,7 +127,7 @@
         "_uuid": "1a0818183568ad420a028de7a70150696174b824"
       },
       "cell_type": "code",
-      "source": "df = pd.DataFrame(columns = columns)\n# please give a path that works on your machine. Keep all the processed files in this path\npath = \"../input/processedmagdata\"\nfor file in os.listdir(path):\n#     print(file)\n    df_temp = pd.read_csv(path+\"/\"+file)\n    df = df.append(df_temp)",
+      "source": "df = pd.DataFrame(columns = columns)\n# please give a path that works on your machine. Keep all the processed files in this path\npath = \"../input/\"\nfor file in os.listdir(path):\n#     print(file)\n    df_temp = pd.read_csv(path+\"/\"+file)\n    df = df.append(df_temp)",
       "execution_count": null,
       "outputs": []
     },
@@ -317,7 +317,7 @@
         "_uuid": "b19f35a3938a1a9bc87cd28e3839089d0b40db6c"
       },
       "cell_type": "code",
-      "source": "df[\"page_rank\"] = 0\ndef update_rank(row):\n    if row[\"Index_Id\"] in page_rank:\n        return page_rank[row[\"Index_Id\"]]\n    else:\n        return 0\ndf[\"page_rank\"] = df.apply(lambda row: update_rank(row),axis = 1)\ndf[\"page_rank\"][0:10]",
+      "source": "df_train[\"page_rank\"] = 0\ndef update_rank(row):\n    if row[\"Id\"] in page_rank:\n        return page_rank[row[\"Id\"]]\n    else:\n        return 0\ndf[\"page_rank\"] = df.apply(lambda row: update_rank(row),axis = 1)\ndf[\"page_rank\"][0:10]",
       "execution_count": null,
       "outputs": []
     },
@@ -334,10 +334,70 @@
     {
       "metadata": {
         "trusted": true,
+        "_uuid": "6672ac63ff14de0ad0c48fabea3472b2a411ed0b"
+      },
+      "cell_type": "code",
+      "source": "cf_list = {}\ncf_score = {}\ni = 0\nfor index,row in df_test.iterrows():\n    info_list = cf_list.get(row[\"Venue\"],[0,0])\n    info_list[0] += pred_y[i]\n    info_list[1] += 1\n    cf_list[row[\"Venue\"]] = info_list\n    i += 1\nfor key,value in cf_list.items():\n    score = value[0]/value[1]\n    cf_score[key] = score",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "d801848a16828d46b862a2f87881373c46c49e70"
+      },
+      "cell_type": "code",
+      "source": "author_score = {}\nauthor_list = {}\nfor row in df.iteritems():\n    values = row[\"Authors\"].split(\"},\")\n    for value in values:\n        val = value\n        index1 = val.find(\"AuId\")\n        index2 = val.find(\"AfN\")\n        index3 = val.find(\"'S'\")\n        if index3 < index1:\n            val = val[index1+4:index2]\n            val = val.strip(\"', :\")\n        else:\n            val = val[index1+4:index3]\n            val = val.strip(\"', :\")                \n        auth_id = val\n        index1 = value.find(\"AuN\")\n        val = value[index1+3:]\n        val = val.strip(\"': }]\")\n        auth_name = val\n        auth_info = author_list.get(auth_id,[\"\",0,0])\n        auth_info[0] = auth_name\n        auth_info[1] += row[\"page_rank\"] * cf_score[row[\"Venue\"]]\n        aut_info[2] += 1\n        author_list[auth_id] = auth_info\nfor key, value in author_list.items():\n    auth_info = author_list.get(key,[\"\",0,0])\n    author_score[key] = auth_info[1]/auth_info[2]",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
         "_uuid": "294479b5e0257689e580f3af6fd4e48aa6651f5a"
       },
       "cell_type": "code",
-      "source": "df = tidy_split(df,\"Authors\",\"},\")",
+      "source": "# df = tidy_split(df,\"Authors\",\"},\")",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "08ccd8938462e6fbd625b4c9aee80034d21e4f93"
+      },
+      "cell_type": "code",
+      "source": "def get_avg_author_score(row):\n    values = row[\"Authors\"].split(\"},\")\n    sum_score = 0\n    for value in values:\n        val = value\n        index1 = val.find(\"AuId\")\n        index2 = val.find(\"AfN\")\n        index3 = val.find(\"'S'\")\n        if index3 < index1:\n            val = val[index1+4:index2]\n            val = val.strip(\"', :\")\n        else:\n            val = val[index1+4:index3]\n            val = val.strip(\"', :\")                \n        auth_id = val\n        sum_score += author_score[auth_id]\n    return sum_score/row[\"Number_Of_authors\"]",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "f483219f214e2fbf297266b4aabe0dd573d86d42"
+      },
+      "cell_type": "code",
+      "source": "df[\"Avg_Author_score\"] = df.apply(lambda row: get_avg_author_score(row),axis = 1)",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "1cec32f51653e0c5bfa8e64e50cfaf8771b3f3da"
+      },
+      "cell_type": "code",
+      "source": "def get_first_author(row):\n    values = row[\"Authors\"].split(\"},\")\n    val = value[0]\n    index1 = val.find(\"AuId\")\n    index2 = val.find(\"AfN\")\n    index3 = val.find(\"'S'\")\n    if index3 < index1:\n        val = val[index1+4:index2]\n        val = val.strip(\"', :\")\n    else:\n        val = val[index1+4:index3]\n        val = val.strip(\"', :\")                \n    auth_id = val\n    return auth_id ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "a2c22cf302ff3ed7794b2bb1ef6d596cfc568a91"
+      },
+      "cell_type": "code",
+      "source": "df[\"FirstAuthor\"] = df.apply(lambda row: get_first_author(row),axis = 1)",
       "execution_count": null,
       "outputs": []
     },
@@ -347,7 +407,7 @@
         "_uuid": "60b24a5ab8f81c3b62d56cc705a3c5de6bbf386a"
       },
       "cell_type": "code",
-      "source": "features = ['Authors_Id','Citation_count','Id','Year','Popularity','Month','Publication_Rank','Publication Type','Number_Of_authors','Topic_Label','Year Since Publication','Venue']",
+      "source": "features = ['Avg_Author_score','FirstAuthor','Citation_count','Id','Year','Popularity','Month','Publication_Rank','Publication Type','Number_Of_authors','Topic_Label','Year Since Publication','Venue_label']",
       "execution_count": null,
       "outputs": []
     },
