--- a/mag.ipynb
+++ b/mag.ipynb
@@ -144,6 +144,16 @@
     {
       "metadata": {
         "trusted": true,
+        "_uuid": "7f932bdf63b631da639d10372424ca0375ed8af1"
+      },
+      "cell_type": "code",
+      "source": "df.shape",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
         "_uuid": "9dcd8173b5764ea7bbb93dd64b7166d832b7099a"
       },
       "cell_type": "code",
@@ -154,10 +164,10 @@
     {
       "metadata": {
         "trusted": true,
-        "_uuid": "04e04e4b238be5b28e13c5fba39aa8e44df42398"
+        "_uuid": "71ecddd0360c65e34f501fcdd506c1e6a58674b1"
       },
       "cell_type": "code",
-      "source": "df.shape",
+      "source": "df.dropna(subset=['Publication_Rank'], how='all', inplace = True)",
       "execution_count": null,
       "outputs": []
     },
@@ -317,7 +327,7 @@
         "_uuid": "b19f35a3938a1a9bc87cd28e3839089d0b40db6c"
       },
       "cell_type": "code",
-      "source": "df_train[\"page_rank\"] = 0\ndef update_rank(row):\n    if row[\"Id\"] in page_rank:\n        return page_rank[row[\"Id\"]]\n    else:\n        return 0\ndf[\"page_rank\"] = df.apply(lambda row: update_rank(row),axis = 1)\ndf[\"page_rank\"][0:10]",
+      "source": "df[\"page_rank\"] = 0\ndef update_rank(row):\n    if row[\"Id\"] in page_rank:\n        return page_rank[row[\"Id\"]]\n    else:\n        return 0\ndf[\"page_rank\"] = df.apply(lambda row: update_rank(row),axis = 1)\ndf[\"page_rank\"][0:10]",
       "execution_count": null,
       "outputs": []
     },
@@ -334,10 +344,40 @@
     {
       "metadata": {
         "trusted": true,
+        "_uuid": "c300864f8a6b162f9099ae66ca03971cbb55bd41"
+      },
+      "cell_type": "code",
+      "source": "del inlink_map\ndel outlink_map",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
         "_uuid": "6672ac63ff14de0ad0c48fabea3472b2a411ed0b"
       },
       "cell_type": "code",
-      "source": "cf_list = {}\ncf_score = {}\ni = 0\nfor index,row in df_test.iterrows():\n    info_list = cf_list.get(row[\"Venue\"],[0,0])\n    info_list[0] += pred_y[i]\n    info_list[1] += 1\n    cf_list[row[\"Venue\"]] = info_list\n    i += 1\nfor key,value in cf_list.items():\n    score = value[0]/value[1]\n    cf_score[key] = score",
+      "source": "cf_list = {}\ncf_score = {}\ni = 0\nfor index,row in df.iterrows():\n    info_list = cf_list.get(row[\"Venue\"],[0,0])\n    info_list[0] += row[\"page_rank\"]\n    info_list[1] += 1\n    cf_list[row[\"Venue\"]] = info_list\n    i += 1\nfor key,value in cf_list.items():\n    score = value[0]/value[1]\n    cf_score[key] = score",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "7eb5d0afaba736ba720064a7f9e8816f3babf62d"
+      },
+      "cell_type": "code",
+      "source": "del cf_list",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "b7ded385c4dbfed113dd0fe849ddd9698b70819c"
+      },
+      "cell_type": "code",
+      "source": "df.head()",
       "execution_count": null,
       "outputs": []
     },
@@ -347,7 +387,17 @@
         "_uuid": "d801848a16828d46b862a2f87881373c46c49e70"
       },
       "cell_type": "code",
-      "source": "author_score = {}\nauthor_list = {}\nfor row in df.iteritems():\n    values = row[\"Authors\"].split(\"},\")\n    for value in values:\n        val = value\n        index1 = val.find(\"AuId\")\n        index2 = val.find(\"AfN\")\n        index3 = val.find(\"'S'\")\n        if index3 < index1:\n            val = val[index1+4:index2]\n            val = val.strip(\"', :\")\n        else:\n            val = val[index1+4:index3]\n            val = val.strip(\"', :\")                \n        auth_id = val\n        index1 = value.find(\"AuN\")\n        val = value[index1+3:]\n        val = val.strip(\"': }]\")\n        auth_name = val\n        auth_info = author_list.get(auth_id,[\"\",0,0])\n        auth_info[0] = auth_name\n        auth_info[1] += row[\"page_rank\"] * cf_score[row[\"Venue\"]]\n        aut_info[2] += 1\n        author_list[auth_id] = auth_info\nfor key, value in author_list.items():\n    auth_info = author_list.get(key,[\"\",0,0])\n    author_score[key] = auth_info[1]/auth_info[2]",
+      "source": "author_score = {}\nauthor_list = {}\nfor index,row in df.iterrows():\n    values = row[\"Authors\"].split(\"},\")\n    for value in values:\n        val = value\n        index1 = val.find(\"AuId\")\n        index2 = val.find(\"AfN\")\n        index3 = val.find(\"'S'\")\n        if index3 < index1:\n            val = val[index1+4:index2]\n            val = val.strip(\"', :\")\n        else:\n            val = val[index1+4:index3]\n            val = val.strip(\"', :\")                \n        auth_id = val\n        index1 = value.find(\"AuN\")\n        val = value[index1+3:]\n        val = val.strip(\"': }]\")\n        auth_name = val\n        auth_info = author_list.get(auth_id,[\"\",0,0])\n        auth_info[0] = auth_name\n        auth_info[1] += row[\"page_rank\"] * cf_score[row[\"Venue\"]]\n        auth_info[2] += 1\n        author_list[auth_id] = auth_info\nfor key, value in author_list.items():\n    auth_info = author_list.get(key,[\"\",0,0])\n    author_score[key] = auth_info[1]/auth_info[2]",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "8953dc634956bdea498c04b183a3690c38be0931"
+      },
+      "cell_type": "code",
+      "source": "del author_list",
       "execution_count": null,
       "outputs": []
     },
@@ -387,7 +437,7 @@
         "_uuid": "1cec32f51653e0c5bfa8e64e50cfaf8771b3f3da"
       },
       "cell_type": "code",
-      "source": "def get_first_author(row):\n    values = row[\"Authors\"].split(\"},\")\n    val = value[0]\n    index1 = val.find(\"AuId\")\n    index2 = val.find(\"AfN\")\n    index3 = val.find(\"'S'\")\n    if index3 < index1:\n        val = val[index1+4:index2]\n        val = val.strip(\"', :\")\n    else:\n        val = val[index1+4:index3]\n        val = val.strip(\"', :\")                \n    auth_id = val\n    return auth_id ",
+      "source": "def get_first_author(row):\n    values = row[\"Authors\"].split(\"},\")\n    val = values[0]\n    index1 = val.find(\"AuId\")\n    index2 = val.find(\"AfN\")\n    index3 = val.find(\"'S'\")\n    if index3 < index1:\n        val = val[index1+4:index2]\n        val = val.strip(\"', :\")\n    else:\n        val = val[index1+4:index3]\n        val = val.strip(\"', :\")                \n    auth_id = val\n    return auth_id ",
       "execution_count": null,
       "outputs": []
     },
@@ -404,10 +454,30 @@
     {
       "metadata": {
         "trusted": true,
+        "_uuid": "8f17f0738f949d2460e2d070e49be236de90f242"
+      },
+      "cell_type": "code",
+      "source": "df.head()",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "46552181297e26b3fdcecfa4cb6288f797d40675"
+      },
+      "cell_type": "code",
+      "source": "df.to_csv(\"final_featured_data.csv\")",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
         "_uuid": "60b24a5ab8f81c3b62d56cc705a3c5de6bbf386a"
       },
       "cell_type": "code",
-      "source": "features = ['Avg_Author_score','FirstAuthor','Citation_count','Id','Year','Popularity','Month','Publication_Rank','Publication Type','Number_Of_authors','Topic_Label','Year Since Publication','Venue_label']",
+      "source": "features = ['Avg_Author_score','FirstAuthor','Citation_count','Id','Year','Popularity','Month','Publication_Rank','Publication Type','Number_Of_authors','Year Since Publication','Venue_label']",
       "execution_count": null,
       "outputs": []
     },
@@ -424,10 +494,50 @@
     {
       "metadata": {
         "trusted": true,
+        "_uuid": "6fdc8225c514979b6db14e4113573bc1a13e24ad"
+      },
+      "cell_type": "code",
+      "source": "df.dtypes",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "90a04f8edde90b37c4bb9ef98444884e0e3ea88a"
+      },
+      "cell_type": "code",
+      "source": "df[\"FirstAuthor\"].unique()",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "0a02aa57f46a0535fc5e8d96535a54d201a6065d"
+      },
+      "cell_type": "code",
+      "source": "df.shape",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "d18a1a25466537f4ba68dc3ba9af6ae20ae3aad4"
+      },
+      "cell_type": "code",
+      "source": "df[\"FirstAuthor\"] = df[\"FirstAuthor\"].astype(int)\ndf[\"Number_Of_authors\"] = df[\"Number_Of_authors\"].astype(int)\ndf[\"Publication Type\"] = df[\"Publication Type\"].astype(int)\ndf[\"Month\"] = df[\"Month\"].astype(int)\ndf[\"Id\"] = df[\"Id\"].astype(int)\ndf[\"Year\"] = df[\"Year\"].astype(int)\ndf[\"Citation_count\"] = df[\"Citation_count\"].astype(int)",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
         "_uuid": "573245d1a73e436e3d633e545f8b48cdeb179de8"
       },
       "cell_type": "code",
-      "source": "import lightgbm as lgb \n\nlgb_params = {\"objective\" : \"regression\", \"metric\" : \"rmse\",\n              \"num_leaves\" : 70, \"learning_rate\" : 0.01, \n              \"bagging_fraction\" : 0.75, \"feature_fraction\" : 0.8, \"bagging_frequency\" : 9}\n    \nlgb_train = lgb.Dataset(lgb_train_x, label=lgb_train_y)\nlgb_val = lgb.Dataset(lgb_valid_x, label=lgb_valid_y)\nmodel = lgb.LGBMRegressor(boosting_type='gbdt',num_leaves=31,max_depth=-1, \nlearning_rate=0.01, \nn_estimators=1000, \nmax_bin=255, \nsubsample_for_bin=50000, \nobjective=None, \nmin_split_gain=0, \nmin_child_weight=3,\nmin_child_samples=10, \nsubsample=1, \nsubsample_freq=1, \ncolsample_bytree=1, \nreg_alpha=0.1, \nreg_lambda=0, \nseed=17,\nsilent=False, \nnthread=-1)\nmodel.fit(df_train[features], df_train[\"page_rank\"], eval_set=[(df_dev[features], df_test[\"page_rank\"])])",
+      "source": "import lightgbm as lgb \n\nlgb_params = {\"objective\" : \"regression\", \"metric\" : \"rmse\",\n              \"num_leaves\" : 70, \"learning_rate\" : 0.01, \n              \"bagging_fraction\" : 0.75, \"feature_fraction\" : 0.8, \"bagging_frequency\" : 9}\n    \nlgb_train = lgb.Dataset(df_train[features], label=df_train[\"page_rank\"])\nlgb_val = lgb.Dataset(df_dev[features], label=df_dev[\"page_rank\"])\nmodel = lgb.LGBMRegressor(boosting_type='gbdt',num_leaves=31,max_depth=-1, \nlearning_rate=0.01, \nn_estimators=1000, \nmax_bin=255, \nsubsample_for_bin=50000, \nobjective=None, \nmin_split_gain=0, \nmin_child_weight=3,\nmin_child_samples=10, \nsubsample=1, \nsubsample_freq=1, \ncolsample_bytree=1, \nreg_alpha=0.1, \nreg_lambda=0, \nseed=17,\nsilent=False, \nnthread=-1)\nmodel.fit(df_train[features], df_train[\"page_rank\"], eval_set=[(df_dev[features], df_dev[\"page_rank\"])])",
       "execution_count": null,
       "outputs": []
     },
@@ -437,7 +547,7 @@
         "_uuid": "e7df1f97eeb3bcd56bcfbd8d3757964a4cab9db2"
       },
       "cell_type": "code",
-      "source": "pred_dev = model.predict(df_test[features])\npred_test = model.predict(df_test[features])",
+      "source": "pred_dev = model.predict(df_dev[features])\npred_test = model.predict(df_eval[features])",
       "execution_count": null,
       "outputs": []
     },
