Initialising the dataframe correectly for author,updating the report

--- a/mag.ipynb
+++ b/mag.ipynb
@@ -517,7 +517,7 @@
         "_uuid": "7c4af276db415595ae7b0a33b01741b8b53cf0a6"
       },
       "cell_type": "code",
-      "source": "columns = [\"Author Id\",\"Author Name\",\"Number Of Papers\",\"Number Of Publications\",\"Author Score\",\"Number Of Citations\"]\ndf_authors = pd.DataFrame(columns)\ndf_authors[\"Author Id\"] = author_score.keys()\ndf_authors[\"Author Score\"] = author_score.values()\ndf_authors[\"Number Of Citations\"] = df_authors.apply(lambda row: get_author_citation(row[\"Author Id\"]),axis = 1)\ndf_authors[\"Number Of Papers\"] = df_authors.apply(lambda row: get_author_papers(row[\"Author Id\"]),axis = 1)\ndf_authors[\"Author Name\"] = df_authors.apply(lambda row: get_author_name(row[\"Author Id\"]),axis = 1)\ndf_authors[\"Number Of Publications\"] = df_authors.apply(lambda row: get_author_publications(row[\"Author Id\"]),axis = 1)",
+      "source": "columns = [\"Author Id\",\"Author Name\",\"Number Of Papers\",\"Number Of Publications\",\"Author Score\",\"Number Of Citations\"]\ndf_authors = pd.DataFrame(np.nan, index=range(0,len(author_score.keys())),columns=columns)\ndf_authors[\"Author Id\"] = author_score.keys()\ndf_authors[\"Author Score\"] = author_score.values()\ndf_authors[\"Number Of Citations\"] = df_authors.apply(lambda row: get_author_citation(row[\"Author Id\"]),axis = 1)\ndf_authors[\"Number Of Papers\"] = df_authors.apply(lambda row: get_author_papers(row[\"Author Id\"]),axis = 1)\ndf_authors[\"Author Name\"] = df_authors.apply(lambda row: get_author_name(row[\"Author Id\"]),axis = 1)\ndf_authors[\"Number Of Publications\"] = df_authors.apply(lambda row: get_author_publications(row[\"Author Id\"]),axis = 1)",
       "execution_count": null,
       "outputs": []
     },
@@ -547,7 +547,7 @@
         "_uuid": "08ccd8938462e6fbd625b4c9aee80034d21e4f93"
       },
       "cell_type": "code",
-      "source": "def get_avg_author_score(row):\n    values = row[\"Authors\"].split(\"},\")\n    sum_score = 0\n    for value in values:\n        val = value\n        index1 = val.find(\"AuId\")\n        index2 = val.find(\"AfN\")\n        index3 = val.find(\"'S'\")\n        if index3 < index1:\n            val = val[index1+4:index2]\n            val = val.strip(\"', :\")\n        else:\n            val = val[index1+4:index3]\n            val = val.strip(\"', :\")                \n        auth_id = val\n#         sum_score += author_score[auth_id]\n        sum_score = df[df[\"Author Id\"] == auth_id][\"Author Score\"]\n    return sum_score/row[\"Number_Of_authors\"]",
+      "source": "def get_avg_author_score(row):\n    values = row[\"Authors\"].split(\"},\")\n    sum_score = 0\n    for value in values:\n        val = value\n        index1 = val.find(\"AuId\")\n        index2 = val.find(\"AfN\")\n        index3 = val.find(\"'S'\")\n        if index3 < index1:\n            val = val[index1+4:index2]\n            val = val.strip(\"', :\")\n        else:\n            val = val[index1+4:index3]\n            val = val.strip(\"', :\")                \n        auth_id = val\n#         sum_score += author_score[auth_id]\n        sum_score = df_authors[df_authors[\"Author Id\"] == auth_id][\"Author Score\"]\n    return sum_score/row[\"Number_Of_authors\"]",
       "execution_count": null,
       "outputs": []
     },
@@ -777,7 +777,7 @@
         "_uuid": "a4b96698d1e9b6c5ff68942f5ff1c6181274c3da"
       },
       "cell_type": "code",
-      "source": "author_score = {}\nauthor_list = {}\nfor index,row in df.iterrows():\n    values = row[\"Authors\"].split(\"},\")\n    for value in values:\n        val = value\n        index1 = val.find(\"AuId\")\n        index2 = val.find(\"AfN\")\n        index3 = val.find(\"'S'\")\n        if index3 < index1:\n            val = val[index1+4:index2]\n            val = val.strip(\"', :\")\n        else:\n            val = val[index1+4:index3]\n            val = val.strip(\"', :\")                \n        auth_id = val\n        index1 = value.find(\"AuN\")\n        val = value[index1+3:]\n        val = val.strip(\"': }]\")\n        auth_name = val\n        auth_info = author_list.get(auth_id,[0,0])\n        auth_info[0] += row[\"page_rank\"] * cf_score[row[\"Venue\"]]\n        auth_info[1] += 1\n        author_list[auth_id] = auth_info\nfor key, value in author_list.items():\n    auth_info = author_list.get(key,[0,0])\n    author_score[key] = auth_info[0]/auth_info[1]",
+      "source": "author_score = {}\nauthor_list = {}\nfor index,row in df_eval.iterrows():\n    values = row[\"Authors\"].split(\"},\")\n    for value in values:\n        val = value\n        index1 = val.find(\"AuId\")\n        index2 = val.find(\"AfN\")\n        index3 = val.find(\"'S'\")\n        if index3 < index1:\n            val = val[index1+4:index2]\n            val = val.strip(\"', :\")\n        else:\n            val = val[index1+4:index3]\n            val = val.strip(\"', :\")                \n        auth_id = val\n        index1 = value.find(\"AuN\")\n        val = value[index1+3:]\n        val = val.strip(\"': }]\")\n        auth_name = val\n        auth_info = author_list.get(auth_id,[0,0])\n        auth_info[0] += row[\"page_rank\"] * row[\"prob\"]\n        auth_info[1] += 1\n        author_list[auth_id] = auth_info\nfor key, value in author_list.items():\n    auth_info = author_list.get(key,[0,0])\n    author_score[key] = auth_info[0]/auth_info[1]",
       "execution_count": null,
       "outputs": []
     },
@@ -787,7 +787,17 @@
         "_uuid": "81c4e032d8d6b901112adfe2d1b39dc0e1c200f8"
       },
       "cell_type": "code",
-      "source": "def get_author_new_score(auth_id):\n    return author_score[auth_id]",
+      "source": "def get_author_new_score(auth_id):\n    if auth_id in author_score.keys():\n        return author_score[auth_id]\n    else:\n        return 0",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "84da0d0dc961a9ea4ab3a7e6cdbb22e9b6e1752b"
+      },
+      "cell_type": "code",
+      "source": "del authr_list\ndel author_score",
       "execution_count": null,
       "outputs": []
     },
