--- a/mag.ipynb
+++ b/mag.ipynb
@@ -337,17 +337,27 @@
         "_uuid": "3e3f1fa126c37bcd19b6c46270c459ccf0b15cca"
       },
       "cell_type": "code",
-      "source": "topic_list = df[\"Topic\"].tolist()\ntopic_dict = {}\ni=0\nfor topic in topic_list:\n    topic_dict[topic] = i\n    i += 1",
+      "source": "# Keeping the top topics only\ntop_topics = [\"medicine\",\"biology\",\"chemistry\",\"physics\",\"psychology\",\"materials science\",\"economics\",\"mathematics\",\"geology\",\"computer science\",\"sociology\",\"environmental science\",\"engineering\",\"business\",\"political science\",\"geography\",\"history\",\"philosophy\",\"artificial intelligence\",\"art\"]\ntopic_list = []\nfor index,row in df.iterrows():\n    if row[\"Topic\"] not in top_topics:\n        topic_list.append(df_pub[df_pub[\"Title\"] == row[\"Venue\"]][\"Subject Area\"].tolist()[0])\n    else:\n        topic_list.append(row[\"Topic\"])\ndf[\"Topic\"] = topic_list\ndel topic_list",
       "execution_count": null,
       "outputs": []
     },
     {
       "metadata": {
         "trusted": true,
-        "_uuid": "24d65faf3645a7133f8a6669ea7cd7c86c3a5827"
+        "_uuid": "9db9ef0155a8ef22b6757391bebe30eb08545853"
       },
       "cell_type": "code",
-      "source": "len(topic_dict)",
+      "source": "plt.figure(figsize=(13,6))\ntop_10 = df[\"Topic\"].value_counts()[0:10]\nprint(top_10)\ntop_10.plot(kind = \"bar\")",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "52bd1255a57489e5925702713e22d736d10a6151"
+      },
+      "cell_type": "code",
+      "source": "topic_list = df[\"Venue\"].tolist()\ntopic_dict = {}\ni=0\nfor topic in topic_list:\n    topic_dict[topic] = i\n    i += 1",
       "execution_count": null,
       "outputs": []
     },
@@ -367,7 +377,7 @@
         "_uuid": "16722486ee31e7642efab181e7a2780dce39ca0c"
       },
       "cell_type": "code",
-      "source": "# df[\"Topic_Label\"] = df.apply(lambda row: topic_dict[row[\"Topic\"]],axis = 1)\ndf[\"Year Since Publication\"] = df.apply(lambda row: 2018-row[\"Year\"],axis =1)\ndf[\"Venue_label\"] = df.apply(lambda row: venue_dict[row[\"Venue\"]],axis = 1)",
+      "source": "# df[\"Topic_Label\"] = df.apply(lambda row: topic_dict[row[\"Topic\"]],axis = 1)\ndf[\"Year Since Publication\"] = df.apply(lambda row: 2018-row[\"Year\"],axis =1)\ndf[\"Venue_label\"] = df.apply(lambda row: venue_dict[row[\"Venue\"]],axis = 1)\ndf[\"Topic_label\"] = df.apply(lambda row: venue_dict[row[\"Topic\"]],axis = 1)",
       "execution_count": null,
       "outputs": []
     },
@@ -377,7 +387,7 @@
         "_uuid": "0d15944e5723f0939078f41da421f0c07cad856b"
       },
       "cell_type": "code",
-      "source": "del venue_list\ndel topic_list",
+      "source": "del venue_list\ndel venue_dict\ndel topic_list\ndel topic_dict",
       "execution_count": null,
       "outputs": []
     },
@@ -627,7 +637,7 @@
         "_uuid": "60b24a5ab8f81c3b62d56cc705a3c5de6bbf386a"
       },
       "cell_type": "code",
-      "source": "features = ['Avg_Author_score','FirstAuthor','FirstAuthorScore','Citation_count','Id','Year','Popularity','Month','Publication_Rank','Publication Type','Number_Of_authors','Year Since Publication','Venue_label','Domain_count']",
+      "source": "features = ['Avg_Author_score','FirstAuthor','FirstAuthorScore','Citation_count','Id','Year','Popularity','Month','Publication_Rank','Publication Type','Number_Of_authors','Year Since Publication','Venue_label','Domain_count','Topic_label']",
       "execution_count": null,
       "outputs": []
     },
@@ -757,7 +767,7 @@
         "_uuid": "1a4b4d565da71f4a89630651c0492b275c4a0cc5"
       },
       "cell_type": "code",
-      "source": "df_eval[0:100].to_csv(\"Model_output_rank.csv\")",
+      "source": "df_eval.to_csv(\"Model_output_rank.csv\")",
       "execution_count": null,
       "outputs": []
     },
